--- a/search-hotels-api-tests/build.gradle
+++ b/search-hotels-api-tests/build.gradle
@@ -11,3 +11,9 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     compile 'io.rest-assured:rest-assured:3.0.3'
 }
+
+test {
+    useTestNG {
+        suites 'src/test/resources/testng.xml'
+    }
+}
